--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "app:build": "npm run build:for:electron && npm run electron:builder"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -29,6 +33,7 @@
     "electron-builder": "^23.0.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
+    "vite-plugin-sass-dts": "^1.1.32",
     "wait-on": "^6.0.1"
   },
   "build": {
