--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
+    "electron": " cross-env IS_DEV=true electron .",
     "electron:pack": "electron-builder --dir",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"npm run electron\"",
     "electron:builder": "electron-builder",
@@ -18,10 +18,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "formik": "^2.2.9",
+    "nedb-promises": "^6.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "redux-saga": "^1.1.3",
     "sass": "^1.52.1",
     "yup": "^0.32.11"
   },
