--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "redux-saga": "^1.1.3",
     "sass": "^1.52.1",
+    "socket.io-client": "^4.5.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
