--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "nedb-promises": "^6.0.3",
     "react": "^18.0.0",
@@ -37,6 +38,7 @@
     "cross-env": "^7.0.3",
     "electron": "^19.0.1",
     "electron-builder": "^23.0.3",
+    "electron-devtools-installer": "^3.2.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-sass-dts": "^1.1.32",
