--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.52.1",
     "socket.io-client": "^4.5.1",
