--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "nedb-promises": "^6.0.3",
